Corrections de style - alignement des montants à droite + collapsing de colonnes

--- a/flairsou_frontend/src/components/UI/atoms/Transaction/Operation/Operation.css
+++ b/flairsou_frontend/src/components/UI/atoms/Transaction/Operation/Operation.css
@@ -1,3 +1,7 @@
 .input-full-width {
     width: 100%;
 }
+
+.amount-input > input {
+  text-align: right !important;
+}
